--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <section class="containerContact">
             <div class="contactinputs">
                 <h4>Contactame</h4>
-                <form action="https://formsubmit.co/your@email.com" method="POST" />
+                <form action="https://formsubmit.co/agbfreelance@gmail.com" method="POST" />
                     <input class="input" name="name" type="text" placeholder="Nombre de la Empresa">
                     <input class="input" name="contact" type="text" placeholder="Telefono o Correo">
                     <input class="input" name="budget" type="text" placeholder="Presupuesto (Rango min-max)">
