--- a/index.html
+++ b/index.html
@@ -339,11 +339,13 @@
         <section class="containerContact">
             <div class="contactinputs">
                 <h4>Contactame</h4>
-                <input class="input" type="text" placeholder="Nombre de la Empresa">
-                <input class="input" type="text" placeholder="Telefono o Correo">
-                <input class="input" type="text" placeholder="Presupuesto (Rango min-max)">
-                <textarea class="input" id="" placeholder="Especifica tu tipo de pagina ideal o pide asesoria"></textarea>
-                <input type="button" class="btn" value="Enviar">
+                <form action="https://formsubmit.co/agbfreelance@gmail.com" method="POST" />
+                    <input class="input" name="name" type="text" placeholder="Nombre de la Empresa">
+                    <input class="input" name="contact" type="text" placeholder="Telefono o Correo">
+                    <input class="input" name="budget" type="text" placeholder="Presupuesto (Rango min-max)">
+                    <textarea class="input" name="message" id="" placeholder="Especifica tu tipo de pagina ideal o pide asesoria"></textarea>
+                    <input type="button" class="btn" value="Enviar">
+                </form>
             </div>
             <div class="contactxt">
                 <section class="contactinfo">
